Correction de la navigation après rebase

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
     <li><a href="#radio-button">Boutons radio</a></li>
     <li><a href="#checkbox">Cases à cocher</a></li>
     <li><a href="#selection-button">Boutons de sélection</a></li>
-
+    <li><a href="#toggle-switch">Commutateur</a></li>
   </ul>
 </nav>
 </div>
