--- a/public/index.html
+++ b/public/index.html
@@ -983,46 +983,35 @@
     <h2 id="buttons">Boutons</h2>
 <h3>Exemples</h3>
 
-<!-- Ligne 1 : Boutons principaux -->
-<div>
-    <qc-button variant="primary" label="Principal"></qc-button>
-    <qc-button variant="primary" rounded label="Principal"></qc-button>
-    <qc-button variant="primary" disabled label="Principal"></qc-button>
-    <qc-button variant="primary" compact label="Principal"></qc-button>
-    <qc-button variant="primary" compact rounded label="Principal"></qc-button>
-    <qc-button variant="primary" compact disabled label="Principal"></qc-button>
-</div>
+<qc-doc-exemple caption="Exemples des différentes options de boutons.">
+    <div>
+        <qc-button variant="primary" label="Principal"></qc-button>
+        <qc-button variant="primary" rounded label="Principal"></qc-button>
+        <qc-button variant="primary" disabled label="Principal"></qc-button>
+        <qc-button variant="primary" compact label="Principal"></qc-button>
+    </div>
 
-<!-- Ligne 2 : Boutons secondaires -->
-<div>
-    <qc-button variant="secondary" label="Secondaire"></qc-button>
-    <qc-button variant="secondary" rounded label="Secondaire"></qc-button>
-    <qc-button variant="secondary" disabled label="Secondaire"></qc-button>
-    <qc-button variant="secondary" compact label="Secondaire"></qc-button>
-    <qc-button variant="secondary" compact rounded label="Secondaire"></qc-button>
-    <qc-button variant="secondary" compact disabled label="Secondaire"></qc-button>
-</div>
+    <div>
+        <qc-button variant="secondary" label="Secondaire"></qc-button>
+        <qc-button variant="secondary" rounded label="Secondaire"></qc-button>
+        <qc-button variant="secondary" disabled label="Secondaire"></qc-button>
+        <qc-button variant="secondary" compact label="Secondaire"></qc-button>
+    </div>
 
-<!-- Ligne 3 : Boutons tertiaires -->
-<div>
-    <qc-button variant="tertiary" label="Tertiaire"></qc-button>
-    <qc-button variant="tertiary" rounded label="Tertiaire"></qc-button>
-    <qc-button variant="tertiary" disabled label="Tertiaire"></qc-button>
-    <qc-button variant="tertiary" compact label="Tertiaire"></qc-button>
-    <qc-button variant="tertiary" compact rounded label="Tertiaire"></qc-button>
-    <qc-button variant="tertiary" compact disabled label="Tertiaire"></qc-button>
-</div>
+    <div>
+        <qc-button variant="tertiary" label="Tertiaire"></qc-button>
+        <qc-button variant="tertiary" rounded label="Tertiaire"></qc-button>
+        <qc-button variant="tertiary" disabled label="Tertiaire"></qc-button>
+        <qc-button variant="tertiary" compact label="Tertiaire"></qc-button>
+    </div>
 
-<!-- Ligne 4 : Boutons d'avertissement -->
-<div>
-    <qc-button variant="danger" label="Avertissement"></qc-button>
-    <qc-button variant="danger" rounded label="Avertissement"></qc-button>
-    <qc-button variant="danger" disabled label="Avertissement"></qc-button>
-    <qc-button variant="danger" compact label="Avertissement"></qc-button>
-    <qc-button variant="danger" compact rounded label="Avertissement"></qc-button>
-    <qc-button variant="danger" compact disabled label="Avertissement"></qc-button>
-</div>
-
+    <div>
+        <qc-button variant="danger" label="Avertissement"></qc-button>
+        <qc-button variant="danger" rounded label="Avertissement"></qc-button>
+        <qc-button variant="danger" disabled label="Avertissement"></qc-button>
+        <qc-button variant="danger" compact label="Avertissement"></qc-button>
+    </div>
+</qc-doc-exemple>
 
 
     <!-- bandeau d’entête PIV -->
