Ajout d'exemples de boutons avec icônes dans la documentation.

--- a/public/index.html
+++ b/public/index.html
@@ -1014,7 +1014,20 @@
 
 </qc-doc-exemple>
 
+<qc-doc-exemple caption="Exemples de boutons avec un icone.">
+    <div>
+        <button class="qc-button qc-primary">
+            <qc-icon icon="plus" label="Précédent" style="margin-right: 8px;"></qc-icon>
+            Précédent
+        </button>
 
+        <button class="qc-button qc-primary">
+            Suivant
+            <qc-icon icon="plus" label="Précédent" style="margin-left: 8px;"></qc-icon>
+        </button>
+    </div>
+
+</qc-doc-exemple>
 
     <!-- bandeau d’entête PIV -->
     <h2 id="piv-header">Bandeau d’en-tête du PIV (qc-piv-header)</h2>
