--- a/public/index.html
+++ b/public/index.html
@@ -2478,13 +2478,13 @@
             required
             invalid-text="Veuillez choisir un type de restaurant."
         >
-            <option>Pizzeria</option>
-            <option>Patisserie</option>
-            <option>Steakhouse</option>
-            <option>Bar</option>
-            <option>Casse-croûte</option>
-            <option>Boîte à pâtes</option>
-            <option>Restaurant à burgers</option>
+            <option value="Pizzeria">Pizzeria</option>
+            <option value="Patisserie">Patisserie</option>
+            <option value="Steakhouse">Steakhouse</option>
+            <option value="Bar">Bar</option>
+            <option value="Casse-croûte">Casse-croûte</option>
+            <option value="Boîte à pâtes">Boîte à pâtes</option>
+            <option value="Restaurant à burgers">Restaurant à burgers</option>
         </qc-dropdown-list>
 
         <qc-dropdown-list
@@ -2496,14 +2496,14 @@
             enable-search
             search-placeholder="Rechercher les régions"
         >
-            <option>Capitale-nationale</option>
-            <option>Centre-du-Québec</option>
-            <option>Montérégie</option>
-            <option>Outaouais</option>
-            <option>Saguenay-Lac-Saint-Jean</option>
-            <option>Gaspésie-Îles-de-la-Madeleine</option>
-            <option>Nord-du-Québec</option>
-            <option>Bas-Saint-Laurent</option>
+            <option value="Capitale-nationale">Capitale-nationale</option>
+            <option value="Centre-du-Québec">Centre-du-Québec</option>
+            <option value="Montérégie">Montérégie</option>
+            <option value="Outaouais">Outaouais</option>
+            <option value="Saguenay-Lac-Saint-Jean">Saguenay-Lac-Saint-Jean</option>
+            <option value="Gaspésie-Îles-de-la-Madeleine">Gaspésie-Îles-de-la-Madeleine</option>
+            <option value="Nord-du-Québec">Nord-du-Québec</option>
+            <option value="Bas-Saint-Laurent">Bas-Saint-Laurent</option>
         </qc-dropdown-list>
 
         <button type="submit" class="btn btn-sm btn-primary">Envoyer</button>
