--- a/public/index.html
+++ b/public/index.html
@@ -2111,6 +2111,7 @@
         <qc-toggle-switch
                 id="nouveaux-messages"
                 label="Nouveaux messages"
+                checked
         ></qc-toggle-switch>
         <qc-toggle-switch
                 id="modifications-messages"
@@ -2124,29 +2125,12 @@
     </qc-toggle-switch-group>
 
     <script>
-        document.getElementById("nouveaux-messages")
-            .addEventListener("change", (event) => {console.log('switch change', event.target.checked)})
-
-        setTimeout(() => {
-            // document.getElementById("nouveaux-messages")
-            //     .addEventListener("change", (event) => {
-            //         console.log(`${event.target.id} mis à ${event.target.checked}`);
-            //     });
-            // document.getElementById("modifications-messages")
-            //     .addEventListener("change", (event) => {
-            //         console.log(`${event.target.id} mis à ${event.target.checked}`);
-            //     });
-            // document.getElementById("messages-supprimes")
-            //     .addEventListener("change", (event) => {
-            //         console.log(`${event.target.id} mis à ${event.target.checked}`);
-            //     });
-            const addedSwitch = document.createElement("qc-toggle-switch");
-            addedSwitch.id = "added-switch";
-            addedSwitch.setAttribute("label", "Messages");
-            document.getElementById("switch-group").appendChild(addedSwitch);
-
-            console.log(document.getElementById("added-switch"));
-        }, 1000);
+        document.getElementById("switch-group").querySelectorAll("qc-toggle-switch")
+            .forEach(switchElement => {
+                switchElement.addEventListener("change", (event) => {
+                    console.log(`'${event.target.id}' mis à ${event.target.checked}`);
+                });
+            });
     </script>
 </qc-doc-exemple>
 
@@ -2187,7 +2171,7 @@
         <td>"left"</td>
         <td>
             Position du libellé par rapport au commutateur
-            <br> N.B: le commutateur et son étiquette sont alignées sur la droite lorsque <code>label-position</code>
+            <br> N.B. : le commutateur et son étiquette sont alignées sur la droite du parent lorsque <code>label-position</code>
             est à "left".
         </td>
     </tr>
@@ -2223,7 +2207,7 @@
         <td>"left"</td>
         <td>
             Position des libellés par rapport aux commutateurs.
-            <br> N.B: les commutateurs et leurs étiquettes sont alignées sur la droite lorsque <code>label-position</code>
+            <br> N.B. : les commutateurs et leurs étiquettes sont alignées sur la droite du parent lorsque <code>label-position</code>
             est à "left".
         </td>
     </tr>
