Ajout d'un exemple format lg, Ajout d'un exemple de deux champs sur la même ligne

--- a/public/index.html
+++ b/public/index.html
@@ -1946,18 +1946,28 @@
             placeholder="ex : G1A 1A1"
     ></qc-textfield>
 
-    <qc-textfield
-            name="phone"
-            label="Téléphone"
-            placeholder="(123) 456-7890"
-            size="md"
-    ></qc-textfield>
+    <div class="qc-textfield-row">
+      <qc-textfield
+              name="telephone"
+              label="Téléphone"
+              size="md"
+              placeholder="(123) 456-7890"
+      ></qc-textfield>
+
+      <qc-textfield
+              name="poste"
+              label="Poste"
+              size="sm"
+              placeholder="1234"
+      ></qc-textfield>
+    </div>
+
 
     <qc-textfield
-            name="poste"
-            label="Poste"
-            placeholder="1234"
-            size="sm"
+            name="text-lg"
+            label="Entrez votre ville"
+            size="lg"
+            placeholder="Québec"
     ></qc-textfield>
 
     <qc-textfield
