Comportement du placeholder ajusté

--- a/public/index.html
+++ b/public/index.html
@@ -1967,7 +1967,7 @@
             name="text-lg"
             label="Entrez votre ville"
             size="lg"
-            placeholder="Québec"
+            placeholder="Ceci est un très long placeholder"
     ></qc-textfield>
 
     <qc-textfield
