--- a/public/index.html
+++ b/public/index.html
@@ -2428,22 +2428,22 @@
         id="dropdown-list-single-choice"
         legend="Faites un choix:"
     >
-        <option value="1">Option 1</option>
-        <option value="2">Option 2</option>
-        <option value="3">Option 3</option>
-        <option value="4">Option 4</option>
-        <option value="5">Option 5</option>
-        <option value="6">Option 6</option>
-        <option value="7">Option 7</option>
-        <option value="8">Option 8</option>
-        <option value="9">Option 9</option>
-        <option value="10">Option 10</option>
-        <option value="11">Option 11</option>
-        <option value="12">Option 12</option>
-        <option value="13">Option 13</option>
-        <option value="14">Option 14</option>
-        <option value="15">Option 15</option>
-        <option value="16">Option 16</option>
+        <qc-option value="1">Option 1</qc-option>
+        <qc-option value="2">Option 2</qc-option>
+        <qc-option value="3">Option 3</qc-option>
+        <qc-option value="4">Option 4</qc-option>
+        <qc-option value="5">Option 5</qc-option>
+        <qc-option value="6">Option 6</qc-option>
+        <qc-option value="7">Option 7</qc-option>
+        <qc-option value="8">Option 8</qc-option>
+        <qc-option value="9">Option 9</qc-option>
+        <qc-option value="10">Option 10</qc-option>
+        <qc-option value="11">Option 11</qc-option>
+        <qc-option value="12">Option 12</qc-option>
+        <qc-option value="13">Option 13</qc-option>
+        <qc-option value="14">Option 14</qc-option>
+        <qc-option value="15">Option 15</qc-option>
+        <qc-option value="16">Option 16</qc-option>
     </qc-dropdown-list>
 
     <script>
@@ -2477,13 +2477,13 @@
             required
             invalid-text="Veuillez choisir un type de restaurant."
         >
-            <option value="Pizzeria">Pizzeria</option>
-            <option value="Patisserie">Patisserie</option>
-            <option value="Steakhouse">Steakhouse</option>
-            <option value="Bar">Bar</option>
-            <option value="Casse-croûte">Casse-croûte</option>
-            <option value="Boîte à pâtes">Boîte à pâtes</option>
-            <option value="Restaurant à burgers">Restaurant à burgers</option>
+            <qc-option value="Pizzeria">Pizzeria</qc-option>
+            <qc-option value="Patisserie">Patisserie</qc-option>
+            <qc-option value="Steakhouse">Steakhouse</qc-option>
+            <qc-option value="Bar">Bar</qc-option>
+            <qc-option value="Casse-croûte">Casse-croûte</qc-option>
+            <qc-option value="Boîte à pâtes">Boîte à pâtes</qc-option>
+            <qc-option value="Restaurant à burgers">Restaurant à burgers</qc-option>
         </qc-dropdown-list>
 
         <qc-dropdown-list
@@ -2495,14 +2495,14 @@
             enable-search
             search-placeholder="Rechercher les régions"
         >
-            <option value="Capitale-nationale">Capitale-nationale</option>
-            <option value="Centre-du-Québec">Centre-du-Québec</option>
-            <option value="Montérégie">Montérégie</option>
-            <option value="Outaouais">Outaouais</option>
-            <option value="Saguenay-Lac-Saint-Jean">Saguenay-Lac-Saint-Jean</option>
-            <option value="Gaspésie-Îles-de-la-Madeleine">Gaspésie-Îles-de-la-Madeleine</option>
-            <option value="Nord-du-Québec">Nord-du-Québec</option>
-            <option value="Bas-Saint-Laurent">Bas-Saint-Laurent</option>
+            <qc-option value="Capitale-nationale">Capitale-nationale</qc-option>
+            <qc-option value="Centre-du-Québec">Centre-du-Québec</qc-option>
+            <qc-option value="Montérégie">Montérégie</qc-option>
+            <qc-option value="Outaouais">Outaouais</qc-option>
+            <qc-option value="Saguenay-Lac-Saint-Jean">Saguenay-Lac-Saint-Jean</qc-option>
+            <qc-option value="Gaspésie-Îles-de-la-Madeleine">Gaspésie-Îles-de-la-Madeleine</qc-option>
+            <qc-option value="Nord-du-Québec">Nord-du-Québec</qc-option>
+            <qc-option value="Bas-Saint-Laurent">Bas-Saint-Laurent</qc-option>
         </qc-dropdown-list>
 
         <button type="submit" class="btn btn-sm btn-primary">Envoyer</button>
