Migration des boutons HTML vers le composant `<qc-button>` dans la documentation.

--- a/public/index.html
+++ b/public/index.html
@@ -985,33 +985,32 @@
 
 <qc-doc-exemple caption="Exemples des différentes options de boutons.">
     <div>
-        <button class="qc-button qc-primary">Principal</button>
-        <button class="qc-button qc-primary qc-button-rounded">Principal</button>
-        <button class="qc-button qc-primary" disabled>Principal</button>
-        <button class="qc-button qc-primary qc-compact">Principal</button>
+        <qc-button variant="primary" label="Principal"></qc-button>
+        <qc-button variant="primary" rounded label="Principal"></qc-button>
+        <qc-button variant="primary" disabled label="Principal"></qc-button>
+        <qc-button variant="primary" compact label="Principal"></qc-button>
     </div>
 
     <div>
-        <button class="qc-button qc-secondary">Secondaire</button>
-        <button class="qc-button qc-secondary qc-button-rounded">Secondaire</button>
-        <button class="qc-button qc-secondary" disabled>Secondaire</button>
-        <button class="qc-button qc-secondary qc-compact">Secondaire</button>
+        <qc-button variant="secondary" label="Secondaire"></qc-button>
+        <qc-button variant="secondary" rounded label="Secondaire"></qc-button>
+        <qc-button variant="secondary" disabled label="Secondaire"></qc-button>
+        <qc-button variant="secondary" compact label="Secondaire"></qc-button>
     </div>
 
     <div>
-        <button class="qc-button qc-tertiary">Tertiaire</button>
-        <button class="qc-button qc-tertiary qc-button-rounded">Tertiaire</button>
-        <button class="qc-button qc-tertiary" disabled>Tertiaire</button>
-        <button class="qc-button qc-tertiary qc-compact">Tertiaire</button>
+        <qc-button variant="tertiary" label="Tertiaire"></qc-button>
+        <qc-button variant="tertiary" rounded label="Tertiaire"></qc-button>
+        <qc-button variant="tertiary" disabled label="Tertiaire"></qc-button>
+        <qc-button variant="tertiary" compact label="Tertiaire"></qc-button>
     </div>
 
     <div>
-        <button class="qc-button qc-danger">Avertissement</button>
-        <button class="qc-button qc-danger qc-button-rounded">Avertissement</button>
-        <button class="qc-button qc-danger" disabled>Avertissement</button>
-        <button class="qc-button qc-danger qc-compact">Avertissement</button>
+        <qc-button variant="danger" label="Avertissement"></qc-button>
+        <qc-button variant="danger" rounded label="Avertissement"></qc-button>
+        <qc-button variant="danger" disabled label="Avertissement"></qc-button>
+        <qc-button variant="danger" compact label="Avertissement"></qc-button>
     </div>
-
 </qc-doc-exemple>
 
 <qc-doc-exemple caption="Exemples de boutons avec un icone.">
