Implantation de la présélection pour DropdownListItemsMultiple

--- a/public/index.html
+++ b/public/index.html
@@ -2502,8 +2502,8 @@
             search-placeholder="Rechercher les régions"
         >
             <qc-option value="Capitale-nationale">Capitale-nationale</qc-option>
-            <qc-option value="Centre-du-Québec">Centre-du-Québec</qc-option>
-            <qc-option value="Montérégie">Montérégie</qc-option>
+            <qc-option value="Centre-du-Québec" selected>Centre-du-Québec</qc-option>
+            <qc-option value="Montérégie" selected>Montérégie</qc-option>
             <qc-option value="Outaouais">Outaouais</qc-option>
             <qc-option value="Saguenay-Lac-Saint-Jean">Saguenay-Lac-Saint-Jean</qc-option>
             <qc-option value="Gaspésie-Îles-de-la-Madeleine">Gaspésie-Îles-de-la-Madeleine</qc-option>
