Ajout de la prise en charge des icônes et de leurs positions dans le composant Button, mise à jour des exemples et de la documentation.

--- a/public/index.html
+++ b/public/index.html
@@ -1015,15 +1015,19 @@
 
 <qc-doc-exemple caption="Exemples de boutons avec un icone.">
     <div>
-        <button class="qc-button qc-primary">
-            <qc-icon icon="plus" label="Précédent"></qc-icon>
-            Précédent
-        </button>
+        <qc-button
+                variant="primary"
+                label="Ajouter"
+                icon="plus"
+                icon-position="left"
+        ></qc-button>
 
-        <button class="qc-button qc-primary">
-            Suivant
-            <qc-icon icon="plus" label="Précédent"></qc-icon>
-        </button>
+        <qc-button
+                variant="primary"
+                label="Suivant"
+                icon="clipboard"
+                icon-position="right"
+        ></qc-button>
     </div>
 
 </qc-doc-exemple>
