--- a/public/index.html
+++ b/public/index.html
@@ -2499,6 +2499,7 @@
             width="xl"
             enable-search
             search-placeholder="Rechercher les régions"
+            multiple
         >
             <qc-option value="Capitale-nationale">Capitale-nationale</qc-option>
             <qc-option value="Centre-du-Québec" selected>Centre-du-Québec</qc-option>
