Ajout de gestion de disabled pour DropdownListSingle

--- a/public/index.html
+++ b/public/index.html
@@ -2443,7 +2443,7 @@
         <qc-option value="13">Option 13</qc-option>
         <qc-option value="14">Option 14</qc-option>
         <qc-option value="15">Option 15</qc-option>
-        <qc-option value="16">Option 16</qc-option>
+        <qc-option value="16" disabled>Option 16</qc-option>
     </qc-dropdown-list>
 
     <qc-dropdown-list
@@ -2508,7 +2508,7 @@
             <qc-option value="Saguenay-Lac-Saint-Jean">Saguenay-Lac-Saint-Jean</qc-option>
             <qc-option value="Gaspésie-Îles-de-la-Madeleine">Gaspésie-Îles-de-la-Madeleine</qc-option>
             <qc-option value="Nord-du-Québec">Nord-du-Québec</qc-option>
-            <qc-option value="Bas-Saint-Laurent">Bas-Saint-Laurent</qc-option>
+            <qc-option value="Bas-Saint-Laurent" disabled>Bas-Saint-Laurent</qc-option>
         </qc-dropdown-list>
 
         <button type="submit" class="btn btn-sm btn-primary">Envoyer</button>
