Changement des largeurs de tokens de spacer input pour aller de xs à xl

--- a/public/index.html
+++ b/public/index.html
@@ -2547,7 +2547,7 @@
             id="dropdown-list-regions"
             label="Régions desservies"
             placeholder="Sélectionner une région"
-            width="xl"
+            width="lg"
             enable-search
             search-placeholder="Rechercher les régions"
             multiple
@@ -2626,8 +2626,8 @@
         </tr>
         <tr>
             <td>width</td>
-            <td>"sm", "md", "lg", "xl", "xxl"</td>
-            <td>"lg"</td>
+            <td>"xs", "sm", "md", "lg", "xl"</td>
+            <td>"md"</td>
             <td>Largeur de la liste déroulante</td>
         </tr>
         <tr>
